@@ -1,7 +1,8 @@
 package com.smrms.smrms.security;
 
-import jakarta.servlet.http.HttpServletResponse; // ⬅️ added
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -10,15 +11,16 @@ import org.springframework.security.authentication.dao.DaoAuthenticationProvider
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.SecurityFilterChain;
+import org. springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto. bcrypt.BCryptPasswordEncoder;
+import org.springframework.security. crypto.password.PasswordEncoder;
+import org.springframework.security. web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors. UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -41,7 +43,7 @@ public class SecurityConfig {
 
                 // 🚦 Authorization rules
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
+                        . requestMatchers(
                                 "/api/auth/**",     // Local login/register
                                 "/oauth2/**",       // Google OAuth2 endpoints
                                 "/login/**",
@@ -50,7 +52,7 @@ public class SecurityConfig {
                         ).permitAll()
 
                         // Staff-only API space (both ADMIN & MAINTENANCE_STAFF)
-                        .requestMatchers("/api/staff/**").hasAnyRole("ADMIN","MAINTENANCE_STAFF")
+                        .requestMatchers("/api/staff/**"). hasAnyRole("ADMIN","MAINTENANCE_STAFF")
 
                         // Admin-only management APIs
                         .requestMatchers("/api/students/**").hasRole("ADMIN")
@@ -60,7 +62,7 @@ public class SecurityConfig {
                 )
 
                 // ⛔ For /api/** without token, return 401 instead of redirecting to Google
-                .exceptionHandling(ex -> ex.authenticationEntryPoint((req, res, e) -> {
+                .exceptionHandling(ex -> ex. authenticationEntryPoint((req, res, e) -> {
                     if (req.getRequestURI().startsWith("/api/")) {
                         res.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
                     } else {
@@ -71,7 +73,7 @@ public class SecurityConfig {
                 // 🔑 OAuth2 (Google login)
                 .oauth2Login(oauth2 -> oauth2
                         .successHandler(oAuth2SuccessHandler)
-                        .failureUrl("http://localhost:5173/login?error=true")
+                        .failureUrl("https://frontend-production-e168.up. railway.app/login?error=true")
                 )
 
                 // 🪶 JWT only → no HTTP session
@@ -107,15 +109,23 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    // ✅ CORS setup: allow React (localhost:5173)
+    // ✅ CORS setup: allow BOTH localhost AND Railway production
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+
+        // 🔥 Allow BOTH localhost (dev) AND Railway (production)
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173",                                    // Local dev
+                "http://localhost:3000",                                    // Alternative local
+                "https://frontend-production-e168.up.railway.app"          // 🚀 Production
+        ));
+
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "*"));
         config.setAllowCredentials(true);
-        config.setExposedHeaders(List.of("Authorization"));
+        config.setExposedHeaders(Arrays.asList("Authorization"));
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
